# pomodoro-timer

./: Cargo.toml  README.md  build.rs  setup.ps1
fonts/: icons.toml
src/: app.rs  config.rs  icon.rs  main.rs  music.rs  timer.rs  window.rs
