[package]
name = "pomodoro-timer"
version = "0.2.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["canvas", "image", "tokio"] }
iced_core = "0.14.0"
iced_video_player = "0.6"
url = "2"
rodio = "0.20.1"
dirs = "5.0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
